gobmkida/c0/komaster_to_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/komaster_to_string/src/engine/board.c:926:12: error: use of undeclared identifier 'off_4E7550'
memcpy( b, off_4E7550, sizeof( b)); 
           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/komaster_to_string/src/obj/1/board.o] Error 1
